--- a/app/src/main/res/drawable/bg_rounded_left.xml
+++ b/app/src/main/res/drawable/bg_rounded_left.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/purpleStatsBg" />
+    <solid android:color="@color/surface_container_low" />
     <corners android:bottomLeftRadius="24dp"
         android:topLeftRadius="24dp"
         />
