--- a/app/src/main/res/drawable/bg_rounded_right.xml
+++ b/app/src/main/res/drawable/bg_rounded_right.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/purpleStatsBg" />
+    <solid android:color="@color/surface_container_low" />
     <corners android:bottomRightRadius="24dp"
         android:topRightRadius="24dp"
         />
