--- a/app/src/main/res/layout/app_detail_layout_tor_support.xml
+++ b/app/src/main/res/layout/app_detail_layout_tor_support.xml
@@ -16,6 +16,7 @@
         android:orientation="vertical"
         android:id="@+id/tor_app_container"
         tools:visibility="visible"
+        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
         android:paddingHorizontal="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/default_padding"
