--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -74,5 +74,5 @@
     <color name="on_surface">#FFFFFF</color>
     <color name="on_surface_variant">#CCCCFF</color>
     <color name="inverse_on_surface">#181F2F</color>
-
+    <color name="tertiary">#93CBF8</color>
 </resources>
