transform manual bridge entry dialog to a full-scale fragment

--- a/app/src/main/res/layout/chip_item.xml
+++ b/app/src/main/res/layout/chip_item.xml
@@ -18,6 +18,7 @@
             app:closeIconTint="@color/white"
             app:chipStartPadding="@dimen/default_padding"
             app:chipEndPadding="@dimen/default_padding"
+            app:chipMinTouchTargetSize="2dp"
             tools:background="@color/purple40"
             />
 </layout>
