--- a/app/src/main/res/layout/fragment_bridgelines.xml
+++ b/app/src/main/res/layout/fragment_bridgelines.xml
@@ -1,38 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <data>
         <import type="android.view.View"/>
         <variable
             name="viewModel"
-            type="org.torproject.vpn.ui.bridgesettings.model.BridgeDialogFragmentViewModel" />
+            type="org.torproject.vpn.ui.bridgesettings.model.BridgeLinesFragmentViewModel" />
     </data>
 
-    <FrameLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="24dp">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:background="@color/purpleDark"
+        tools:context="org.torproject.vpn.ui.bridgesettings.BrideLinesFragment">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/app_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            android:theme="@style/Theme.TorVPN.AppBarOverlay"
+            android:background="?attr/colorPrimary"
+            >
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                app:navigationIcon="@drawable/ic_close_big"
+                android:paddingEnd="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:title="@string/add_new_bridge"
+                app:menu="@menu/bridgelines_menu"
+                app:popupTheme="@style/Theme.TorVPN.PopupOverlay" />
+        </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/round_dialog_bg"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:paddingStart="16dp"
             android:paddingTop="24dp"
             android:paddingEnd="16dp"
             android:paddingBottom="24dp">
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/center_horizontal_guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.433"
+                />
             <TextView
-                android:id="@+id/tv_header"
+                android:id="@+id/tv_description"
                 style="@style/dialog_title_small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
                 android:layout_marginHorizontal="16dp"
                 android:gravity="start"
                 android:paddingBottom="@dimen/default_padding"
-                android:text="@string/bridge_address"
+                android:text="@string/bridge_address_description"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintHorizontal_bias="0"
@@ -41,28 +70,30 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cl_editText"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_header"
+                app:layout_constraintTop_toBottomOf="@id/tv_description"
+                app:layout_constraintBottom_toBottomOf="@+id/center_horizontal_guideline"
                 android:layout_marginHorizontal="16dp"
                 >
 
                 <androidx.core.widget.NestedScrollView
                     android:id="@+id/scrollViewContainer"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginVertical="@dimen/default_padding"
+                    android:layout_height="0dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginBottom="@dimen/compact_padding"
                     android:background="@drawable/round_material_edittext_outline"
                     android:orientation="vertical"
                     android:overScrollMode="never"
                     android:paddingTop="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintVertical_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintHeight_max="200dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     >
 
                     <androidx.appcompat.widget.LinearLayoutCompat
@@ -100,11 +131,10 @@
                     android:textColor="@color/purple40"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/round_dialog_bg"
+                    android:background="@drawable/bridgeline_addresses_bg"
                     android:text="@string/bridge_addresses"
                     app:layout_constraintStart_toStartOf="@+id/scrollViewContainer"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginTop="@dimen/compact_padding"
                     android:layout_marginHorizontal="@dimen/default_padding"
                     android:paddingHorizontal="@dimen/compact_padding"
                     />
@@ -116,45 +146,17 @@
                 style="@style/small_info_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginHorizontal="24dp"
+                android:layout_marginHorizontal="40dp"
                 android:gravity="start"
-                android:paddingBottom="@dimen/default_padding"
                 android:maxLines="1"
                 android:ellipsize="end"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintTop_toBottomOf="@id/cl_editText"
+                app:layout_constraintVertical_bias="0"
                 android:visibility="visible"
                 />
-
-
-            <TextView
-                android:id="@+id/tv_action_cancel"
-                style="@style/error_action_text_secondary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="48dp"
-                android:layout_marginEnd="8dp"
-                android:padding="@dimen/default_padding"
-                android:text="@string/action_cancel"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/tv_action"
-                app:layout_constraintTop_toBottomOf="@+id/cl_editText" />
-
-            <TextView
-                android:id="@+id/tv_action"
-                style="@style/error_action_text_primary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="48dp"
-                android:layout_marginEnd="8dp"
-                android:text="@string/action_save"
-                android:padding="@dimen/default_padding"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cl_editText" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </FrameLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
