--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,9 @@
         <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
         <item name="android:statusBarColor">@color/purpleDark</item>
 
+        <item name="actionMenuTextColor">@color/tertiary</item>
+        <item name="android:actionMenuTextColor">@color/tertiary</item>
+
         <!-- Customize your theme here. -->
     </style>
 
