--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,6 +22,9 @@
         <action
             android:id="@+id/action_configureFragment_to_offlineHelpFragment"
             app:destination="@+id/offlineHelpFragment" />
+        <action
+            android:id="@+id/action_configureFragment_to_aboutFragment"
+            app:destination="@+id/aboutFragment" />
     </fragment>
 
     <fragment
@@ -56,6 +59,12 @@
             android:id="@+id/action_navigation_appRouting_to_appDetailFragment"
             app:destination="@+id/appDetailFragment"
             />
+    </fragment>
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="org.torproject.vpn.ui.about.AboutFragment"
+        android:label="AboutFragment"
+        tools:layout="@layout/fragment_about">
     </fragment>
     <fragment
         android:id="@+id/connectionFragment"
