--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -62,6 +62,7 @@
                     android:orientation="vertical">
 
                     <androidx.appcompat.widget.LinearLayoutCompat
+                        android:id="@+id/ll_faq_container"
                         android:layout_width="match_parent"
                         android:layout_height="64dp"
                         android:orientation="horizontal"
@@ -100,6 +101,7 @@
                         android:background="@color/outline"
                         />
                     <androidx.appcompat.widget.LinearLayoutCompat
+                        android:id="@+id/ll_reort_bugs_container"
                         android:layout_width="match_parent"
                         android:layout_height="64dp"
                         android:orientation="horizontal"
@@ -132,6 +134,7 @@
                         android:background="@color/outline"
                         />
                     <androidx.appcompat.widget.LinearLayoutCompat
+                        android:id="@+id/ll_contact_support_container"
                         android:layout_width="match_parent"
                         android:layout_height="64dp"
                         android:orientation="horizontal"
