--- a/app/src/main/res/layout/fragment_report_bug_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_report_bug_bottom_sheet.xml
@@ -9,6 +9,7 @@
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/cl_report_bug_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="@dimen/default_padding"
