--- a/app/src/main/res/layout/include_connection_stats.xml
+++ b/app/src/main/res/layout/include_connection_stats.xml
@@ -184,12 +184,17 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tv_protect_all_apps_label"
                 style="@style/stats_kbits_text"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
+                android:layout_marginEnd="8dp"
                 android:text="@{viewModel.appProtectionLabel}"
+                tools:text="a very long string that completely overflows"
+                android:maxLines="1"
+                android:ellipsize="end"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/ic_protect_app"
+                app:layout_constraintEnd_toStartOf="@id/view2"
                 app:layout_constraintTop_toBottomOf="@+id/tv_stat_title" />
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -259,6 +264,9 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="8dp"
                 android:text="@{viewModel.connectionHint}"
+                android:maxLines="1"
+                android:ellipsize="end"
+                tools:text="a very long string that overflows the ui"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/view3"
                 app:layout_constraintStart_toEndOf="@+id/ic_connection"
