--- a/app/src/main/res/layout/fragment_logging.xml
+++ b/app/src/main/res/layout/fragment_logging.xml
@@ -8,9 +8,9 @@
         android:layout_height="match_parent"
         tools:context="org.torproject.vpn.ui.logging.LoggingFragment">
 
-        <androidx.appcompat.widget.Toolbar
+        <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary"
+            style="@style/Widget.Material3.Toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:layout_collapseMode="pin"
@@ -19,7 +19,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:navigationIcon="?attr/homeAsUpIndicator"
             app:menu="@menu/tor_log_menu"
-            app:popupTheme="@style/Theme.TorVPN.PopupOverlay" />
+            app:popupTheme="@style/ThemeOverlay.Material3.Light" />
 
 
         <androidx.recyclerview.widget.RecyclerView
