--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,17 +1,45 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.TorVPN" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
+    <style name="Theme.TorVPN" parent="Theme.Material3.DayNight.NoActionBar">
+
         <item name="colorPrimary">@color/purpleDark</item>
-        <item name="colorPrimaryVariant">@color/purpleNormal</item>
         <item name="colorOnPrimary">@color/textOnPrimary</item>
-        <!-- Secondary brand color(same as primary in our case). -->
+
         <item name="colorSecondary">@color/purpleDark</item>
-        <item name="colorSecondaryVariant">@color/purpleNormal</item>
         <item name="colorOnSecondary">@color/textOnPrimary</item>
+
+        <item name="colorTertiary">@color/purpleDark</item>
+        <item name="colorOnTertiary">@color/textOnPrimary</item>
+
+        <item name="colorSurface">@color/purpleDark</item>
+        <item name="colorOnSurface">@color/textOnPrimary</item>
+
         <!-- Status bar color. -->
         <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
-        <item name="android:statusBarColor" tools:targetApi="l">@color/purpleDark</item>
+        <item name="android:statusBarColor">@color/purpleDark</item>
+
+        <item name="actionMenuTextColor">@color/tertiary</item>
+        <item name="android:actionMenuTextColor">@color/tertiary</item>
+
         <!-- Customize your theme here. -->
+
+        <item name="android:colorBackground">@color/purpleDark</item>
+        <item name="colorError">@color/md_theme_error</item>
+        <item name="colorOnError">@color/md_theme_onError</item>
+
+        <item name="toolbarStyle">@style/Widget.Material3.Toolbar</item>
+        <item name="bottomNavigationStyle">@style/Widget.Material3.BottomNavigationView</item>
+
+
     </style>
+
+    <style name="Theme.TorVPN.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.TorVPN.AppBarOverlay" parent="ThemeOverlay.Material3.Dark.ActionBar" />
+
+    <style name="Theme.TorVPN.PopupOverlay" parent="ThemeOverlay.Material3.Light" />
+
+
 </resources>
