--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -75,4 +75,7 @@
     <color name="on_surface_variant">#CCCCFF</color>
     <color name="inverse_on_surface">#181F2F</color>
     <color name="tertiary">#93CBF8</color>
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+
 </resources>
