--- a/app/src/main/res/layout/include_guide_frame.xml
+++ b/app/src/main/res/layout/include_guide_frame.xml
@@ -93,6 +93,7 @@
                 android:textFontWeight="550"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintBottom_toTopOf="@+id/textView19"
                 app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
             <TextView
